--- a/Javascript/Aulas/101-110-Aulas/106-Novos-Metodos-Strings/106.html
+++ b/Javascript/Aulas/101-110-Aulas/106-Novos-Metodos-Strings/106.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="">
 
-    <title>Aula </title>
+    <title>Aula 106 - Novos Metodos para strings </title>
 
-    <script text="javascript/text" src=".js"></script>
+    <script text="javascript/text" src="106.js"></script>
 
 </head>
 
 <body>
-    
+    <p>Lembrando que string é um array de caracteres</p>
+    <p>Manipular strings com 4 metodos startsWith , endsWith , includes e repeat</p>
 </body>
 </html>
