--- a/Javascript/Aulas/91-100-Aulas/100-ParametrosRest-spreaddeparametros/100.html
+++ b/Javascript/Aulas/91-100-Aulas/100-ParametrosRest-spreaddeparametros/100.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="">
 
-    <title>Aula </title>
+    <title>Aula 100 - Parametros Rest </title>
 
-    <script text="javascript/text" src=".js"></script>
+    <script text="javascript/text" src="100.js"></script>
 
 </head>
 
 <body>
-    
+    <p> Parametros Rest são parametros para adicionar mais parametros automaticos na função</p>
 </body>
 </html>
