--- a/Javascript/Aulas/91-100-Aulas/96-OperacoesTernarias/96.html
+++ b/Javascript/Aulas/91-100-Aulas/96-OperacoesTernarias/96.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="96.css">
 
-    <title>Aula </title>
+    <title>Aula 96 - Operações ternarias em if</title>
 
-    <script text="javascript/text" src=".js"></script>
+    <script text="javascript/text" src="96.js"></script>
 
 </head>
 
