--- a/Javascript/Aulas/91-100-Aulas/99-forIn-ForOf/99.html
+++ b/Javascript/Aulas/91-100-Aulas/99-forIn-ForOf/99.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="">
 
-    <title>Aula </title>
+    <title>Aula 99 - Estruturas de looping for in e for of</title>
 
-    <script text="javascript/text" src=".js"></script>
+    <script text="javascript/text" src="99.js"></script>
 
 </head>
 
 <body>
-    
+    <p>Estruturas de looping for in looping para percorrer os atributos do objetos
+         e for of para pecorrer arrays
+    </p>
 </body>
 </html>
