--- a/Javascript/Aulas/101-110-Aulas/101-Funcoes-Anonimas/101.html
+++ b/Javascript/Aulas/101-110-Aulas/101-Funcoes-Anonimas/101.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="">
 
-    <title>Aula </title>
+    <title>Aula 101 - Funções anonimas </title>
 
-    <script text="javascript/text" src=".js"></script>
+    <script text="javascript/text" src="101.js"></script>
 
 </head>
 
 <body>
-    
+    <p> funções anonimas não necessitam de nome em seu tempo de execução</p>
 </body>
 </html>
