--- a/Javascript/Aulas/101-110-Aulas/107-Iterator/107.html
+++ b/Javascript/Aulas/101-110-Aulas/107-Iterator/107.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="">
 
-    <title>Aula </title>
+    <title>Aula 107 - Trabalhando com iterator </title>
 
-    <script text="javascript/text" src=".js"></script>
+    <script text="javascript/text" src="107.js"></script>
 
 </head>
 
