--- a/Javascript/Aulas/91-100-Aulas/94-Cookies/94.html
+++ b/Javascript/Aulas/91-100-Aulas/94-Cookies/94.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="94.css">
 
-    <title>Aula </title>
+    <title>Aula 94 - Criando cookies, excluir e utilizar eles</title>
 
-    <script text="javascript/text" src=".js"></script>
+    <script text="javascript/text" src="94.js"></script>
 
 </head>
 
