--- a/Javascript/Aulas/91-100-Aulas/95-Let-Const/95.html
+++ b/Javascript/Aulas/91-100-Aulas/95-Let-Const/95.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="95.css">
 
-    <title>Aula </title>
+    <title>Aula 95 - Declaração de variaveis com Let e Const</title>
 
-    <script text="javascript/text" src=".js"></script>
+    <script text="javascript/text" src="95.js"></script>
 
 </head>
 
