--- a/Javascript/Aulas/91-100-Aulas/97-OperadorSpread-P1/97.html
+++ b/Javascript/Aulas/91-100-Aulas/97-OperadorSpread-P1/97.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="">
 
-    <title>Aula </title>
+    <title>Aula 97 - Operador spread </title>
 
-    <script text="javascript/text" src=".js"></script>
+    <script text="javascript/text" src="97.js"></script>
 
 </head>
 
 <body>
-    
+    <p>Objetivos é colocar variaveis individuais para um conjunto de array e por isso usamos
+        o operador spread ... 
+    </p>
 </body>
 </html>
