Ate a aula 114 javascript

--- a/Javascript/Aulas/111-120-Aulas/114-Classes-Heranca-POO-P5/114.html
+++ b/Javascript/Aulas/111-120-Aulas/114-Classes-Heranca-POO-P5/114.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="">
 
-    <title>Aula 108 - Objeto map</title>
+    <title>Aula 114 - Classes POO Herança</title>
 
-    <script text="javascript/text" src="108.js"></script>
+    <script text="javascript/text" src="114.js"></script>
 
 </head>
 
 <body>
-   <p>A coleção de map é uma especificação do ES6 é uma coleção de par ou seja chave valor </p> 
-   
+    
+   <p> Herança em POO  </p>
 </body>
 </html>
