--- a/Javascript/Aulas/101-110-Aulas/110-Classes-POO-P1/110.html
+++ b/Javascript/Aulas/101-110-Aulas/110-Classes-POO-P1/110.html
@@ -6,14 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="">
 
-    <title>Aula 108 - Objeto map</title>
+    <title>Aula 110 - Classes e Programação orientada objetos</title>
 
-    <script text="javascript/text" src="108.js"></script>
+    <script text="javascript/text" src="110.js"></script>
 
 </head>
 
 <body>
-   <p>A coleção de map é uma especificação do ES6 é uma coleção de par ou seja chave valor </p> 
-   
+    
 </body>
 </html>
