--- a/Javascript/Aulas/111-120-Aulas/111-Classes-Metodos-POO-P2/111.html
+++ b/Javascript/Aulas/111-120-Aulas/111-Classes-Metodos-POO-P2/111.html
@@ -6,14 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="">
 
-    <title>Aula 108 - Objeto map</title>
+    <title>Aula 111 - Metodos dentro da classes</title>
 
-    <script text="javascript/text" src="108.js"></script>
+    <script text="javascript/text" src="111.js"></script>
 
 </head>
 
 <body>
-   <p>A coleção de map é uma especificação do ES6 é uma coleção de par ou seja chave valor </p> 
-   
+    
 </body>
 </html>
