--- a/HTML5/Aulas/Aulas-91-100/Aula-95-Acordeon/95.html
+++ b/HTML5/Aulas/Aulas-91-100/Aula-95-Acordeon/95.html
@@ -5,9 +5,44 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Aula 95 - Acordeon</title>
+   <link type="text/css" rel="stylesheet" href="95.css">
 </head>
 <body>
    
+   <button class="acordeon">Clique Aqui</button>
+   <article class="painel">
+      <p>
+         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sapien nisi, tincidunt quis ultrices 
+         vitae, mollis sit amet risus. Sed quis odio lectus. Nunc a lectus elit. Nunc volutpat urna. 
+      </p>
+   </article>
+   <button class="acordeon">Clique aqui</button>
+   <article class="painel">
+      <p>
+         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sapien nisi, tincidunt quis ultrices 
+         vitae, mollis sit amet risus. Sed quis odio lectus. Nunc a lectus elit. Nunc volutpat urna. 
+      </p>
+      <p>
+         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sapien nisi, tincidunt quis ultrices 
+         vitae, mollis sit amet risus. Sed quis odio lectus. Nunc a lectus elit. Nunc volutpat urna. 
+      </p> <p>
+         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sapien nisi, tincidunt quis ultrices 
+         vitae, mollis sit amet risus. Sed quis odio lectus. Nunc a lectus elit. Nunc volutpat urna. 
+      </p> <p>
+         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sapien nisi, tincidunt quis ultrices 
+         vitae, mollis sit amet risus. Sed quis odio lectus. Nunc a lectus elit. Nunc volutpat urna. 
+      </p> <p>
+         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sapien nisi, tincidunt quis ultrices 
+         vitae, mollis sit amet risus. Sed quis odio lectus. Nunc a lectus elit. Nunc volutpat urna. 
+      </p>
+   </article>
+   <button class="acordeon">CFB Cursos</button>
+   <article class="painel">
+      <p>
+         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sapien nisi, tincidunt quis ultrices 
+         vitae, mollis sit amet risus. Sed quis odio lectus. Nunc a lectus elit. Nunc volutpat urna. 
+      </p>
+   </article>
 <script type="text/javascript" src="95.js"></script>
 </body>
 </html>
