Ate a aula 104 de HTML

--- a/HTML5/Aulas/LayoutPadrao.html
+++ b/HTML5/Aulas/LayoutPadrao.html
@@ -4,32 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href=".css">
+    <title> Aula   -  </title>
 
-    <title> </title>
-
-    <style type="text/css">
-    *
-    {
-        padding: 1px;
-        margin: 1px;
-    }
-    </style>
 </head>
 <body>
 
-    <h1>  </h1>
-
-    <p>A tag </p>
-
-    <p>Caracteristicas</p>
-
-    <p>Display: </p>
-    <p>Categoria: </p>
-    <p>Pai(contido): </p>
-    <p>Filho: </p>
-    <p>Atributos: </p>
-
-    <p>-----------------</p>
-
+ 
+<script src=""></script>
 </body>
 </html>
